[tool.poetry]
name = "repl_python3_lesson7-matplotlib-a5719063"
version = "0.1.0"
description = ""
authors = ["Nakagawa0208 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
